package model.dungeon.entity.behavior.check;

import model.dungeon.Maze;
import model.dungeon.entity.Entity;

public class CheckHero implements Check {

    @Override
    public boolean check(Maze maze, Entity entity) {
        return false;
    }
}
